# adorym_dev

./: reconstruct_ptycho.py  setup.cfg  tiffile-2018.10.18-py2.py3-none-any.whl
adorym/: array_ops.py  misc.py  optimizers.py  ptychography.py  util.py
tests/: test_multislice_ptycho_256_theta.py
