[metadata]
name = adorym
version = 1.0.0
author = Ming Du
description = Automatic differentiation-based object retrieval with dynamic modeling
packages=setuptools.find_packages(exclude=['docs'])
include_package_data = True
url = http://github.com/mdw771/adorym_dev.git 
keywords = [ adorym ]
license = BSD-3
platforms = Any
classifiers =
   Development Status :: 3 - Alpha
   License :: OSI Approved :: BSD License
   Programming Language :: Python :: 2.7
   Programming Language :: Python :: 3.4
   Programming Language :: Python :: 3.5
   Operating System :: OS Independent
   Topic :: Scientific/Engineering :: Physics
   Topic :: Scientific/Engineering :: Chemistry
   Topic :: Software Development :: Libraries
   Intended Audience :: Science/Research
   Intended Audience :: Education
   Intended Audience :: Developers 

[options]
package_dir=
	=src
packages=find:
install_requires = 
  numpy
  autograd
  h5py
  dxchange
  mpi4py
  tiffile
  dxchange @ git+https://github.com/data-exchange/dxchange@v0.1.5#egg=dxchange 
  six; python_version == "2.7"

[options.packages.find]
where=src

[options.extras_require]
pytorchbackend = torch
